NOTE: for more news about the package, see https://github.com/florianhartig/DHARMa/releases

DHARMa 0.1.7


New features

- support for glmmTMB

Minor changes

- changed plot function names

Bugfixes


DHARMa 0.1.6

New features

- option to apply rank tranformation of x values in plotResiduals, see https://github.com/florianhartig/DHARMa/issues/44
- option to convert predictor to factor
- random seed is fixed, random state is recorded

Minor changes

- changed syntax in tests for sptial / temporal autocorrlation - null provides now random. Also, custom distance matrices can be provided to testSpatialAutocorrelation
- slight changes to plot layout

Bugfixes

- error catching for crashes in plot function https://github.com/florianhartig/DHARMa/issues/42
- bugfix for glmer.nb parametricOverdispersinTest https://github.com/florianhartig/DHARMa/issues/47

DHARMa 0.1.5

Minor changes

- fixes a bug in version 0.1.4 that occurred when running simulateResiduals with refit = T. Apologies for any inconvenience. 

DHARMa 0.1.4 

Major changes

- new experimental non-parametric dispersion test on simulated residuals. Extended simulations to compare dispersion tests

Minor changes

- supports for binomial with response coded as factor
- error catching for refit procedure https://github.com/florianhartig/DHARMa/issues/18
- warnings in case the refit procedure fails or produces identical parameter values https://github.com/florianhartig/DHARMa/issues/20

DHARMa 0.1.3 

Major changes

- includes support for model class 'gam' from package 'mgcv'. Required overwriting the 'fitted' function for gam, see https://github.com/florianhartig/DHARMa/issues/12

Minor changes

- plotResiduals includes support for factors 

- updates to the help 

DHARMa 0.1.2
