@@ -12,7 +12,7 @@ plotSimulatedResiduals(simulationOutput, ...)
 \item{...}{further options for \code{\link{plotResiduals}}. Consider in particular parameters quantreg, rank and asFactor. xlab, ylab and main cannot be changed when using plotSimulatedResiduals, but can be changed when using plotResiduals.}
 }
 \description{
-DEPRECATED, use plot.DHARMa
+DEPRECATED, use plot() instead
 }
 \note{
 THis function is deprecated. Use \code{\link{plot.DHARMa}}
