@@ -5,13 +5,15 @@ DHARMa 0.1.7
 
 New features
 
-- support for glmmTMB
+- support for glmmTMB https://github.com/florianhartig/DHARMa/issues/16
 
 Minor changes
 
 - changed plot function names
 
 Bugfixes
+
+- fixed bug with zeroinflation test for k/n binomial data https://github.com/florianhartig/DHARMa/issues/55
 
 
 DHARMa 0.1.6
